sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: '=' expected but ';' found.
      copie(j,j+1)
^